--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<style>
-    
-</style>
 <html>
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <img  src="images/logo.png" alt="LOGO" style="width:100px;height:100px;"></img>
+        <img class='logo' src="images/logo.png" alt="LOGO" style="width:100px;height:100px;"></img>
         <title>The best page ever</title>
         
-        <button type="submit">Login/Sign up</button>
-        <button type="submit">Cart</button>
+        <button class='button' type="submit">Login/Sign up</button>
+        <button class='button' type="submit">Cart</button>
     </head>
     <body>
         <h1>The best page ever</h1>
@@ -20,12 +17,12 @@
                 <div>Magusad kõrsikud</div>
                 <div>60 EUR</div>
             </div></a>
-            <a href='product.html'></a><div class='product'>
+            <a href='product.html'><div class='product'>
                 <img src="images/bubba.jpg" alt="" style="width:100px;height:100px;">
                 <div>Hubba bobba</div>
                 <div>1500 EUR</div>
             </div></a>
-            <a href='product.html'></a><div class='product'>
+            <a href='product.html'><div class='product'>
                 <img src="images/piim.jpg" alt="" style="width:100px;height:100px;">
                 <div>Alma piim</div>
                 <div>5 EUR</div>
