--- a/static/product.html
+++ b/static/product.html
@@ -7,12 +7,11 @@
         <script>alert("Hello World!");</script> 
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <a href='index.html'> <img src="images/logo.png" alt="LOGO" style="width:100px;height:100px;"></img></a>
-        <title>Product page</title>
+        <a href='index.html'><img class='logo' src="images/logo.png" alt="LOGO" style="width:100px;height:100px;"></img></a>
+        <title>toote leht</title>
         
-        <button type="submit">Login/Sign up</button>
-        <button type="submit">Cart</button>
-        
+        <button class='button' type="submit">Login/Sign up</button>
+        <button class='button' type="submit">Cart</button>
     </head>
     <body>
         <h1>Product page</h1>
