--- a/static/index.html
+++ b/static/index.html
@@ -3,28 +3,30 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <img class='logo' src="images/logo.png" alt="LOGO" style="width:100px;height:100px;"></img>
-        <title>The best page ever</title>
-        
-        <button class='button' type="submit">Login/Sign up</button>
-        <button class='button' type="submit">Cart</button>
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+        <title>rp2019</title>
+        <div class="header">
+            <img class='logo' src="images/logo.png" alt="LOGO"></img>
+            <button class='button' type="submit">Login/Sign up</button>
+            <button class='button' type="submit">Cart</button>
+        </div>
+        </head>
     <body>
-        <h1>The best page ever</h1>
+        <h1>Art</h1>
         <div class='products'>
                 <a href='product.html'><div class='product'>
-                <img src="images/pulk.jpg" alt="" style="width:100px;height:100px;">
-                <div>Magusad kõrsikud</div>
+                <img src="images/space2.jpg" alt="">
+                <div>Spaceman 1</div>
                 <div>60 EUR</div>
             </div></a>
             <a href='product.html'><div class='product'>
-                <img src="images/bubba.jpg" alt="" style="width:100px;height:100px;">
-                <div>Hubba bobba</div>
+                <img src="images/space3.jpg" alt="">
+                <div>Spaceman 2</div>
                 <div>1500 EUR</div>
             </div></a>
             <a href='product.html'><div class='product'>
-                <img src="images/piim.jpg" alt="" style="width:100px;height:100px;">
-                <div>Alma piim</div>
+                <img src="images/space1.jpg" alt="">
+                <div>Spaceman 3</div>
                 <div>5 EUR</div>
             </div></a>
         </div>
