item classes added

--- a/static/index.html
+++ b/static/index.html
@@ -16,18 +16,18 @@
         <div class='products'>
                 <a href='product.html'><div class='product'>
                 <img src="images/space2.jpg" alt="">
-                <div>Spaceman 1</div>
-                <div>60 EUR</div>
+                <div class="item_name">Spaceman 1</div>
+                <div class="item_price">60 EUR</div>
             </div></a>
             <a href='product.html'><div class='product'>
                 <img src="images/space3.jpg" alt="">
-                <div>Spaceman 2</div>
-                <div>1500 EUR</div>
+                <div class="item_name">Spaceman 2</div>
+                <div class="item_price">1500 EUR</div>
             </div></a>
             <a href='product.html'><div class='product'>
                 <img src="images/space1.jpg" alt="">
-                <div>Spaceman 3</div>
-                <div>5 EUR</div>
+                <div class="item_name">Spaceman 3</div>
+                <div class="item_price">5 EUR</div>
             </div></a>
         </div>
     </body>
