--- a/static/product.html
+++ b/static/product.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<style>
-    
-</style>
+
 <html>
     <head>
-        <script>alert("Hello World!");</script> 
+        <script>alert("Hello World!");
+        </script> 
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
