--- a/static/index.html
+++ b/static/index.html
@@ -13,18 +13,21 @@
         </head>
     <body>
         <h1>Art</h1>
-        <div class='products'>
-                <a href='product.html'><div class='product'>
+        <div class='items'>
+                <a href='./item.html?title=Spaceman_1&cost=60&src=./images/space2.jpg'>
+                <div class='item'>
                 <img src="images/space2.jpg" alt="">
                 <div class="item_name">Spaceman 1</div>
                 <div class="item_price">60 EUR</div>
             </div></a>
-            <a href='product.html'><div class='product'>
+            <a href='./item.html?title=Spaceman_2&cost=1500&src=./images/space3.jpg'>
+                <div class='item'>
                 <img src="images/space3.jpg" alt="">
                 <div class="item_name">Spaceman 2</div>
                 <div class="item_price">1500 EUR</div>
             </div></a>
-            <a href='product.html'><div class='product'>
+            <a href='./item.html?title=Spaceman_3&cost=5&src=./images/space1.jpg'>
+                <div class='item'>
                 <img src="images/space1.jpg" alt="">
                 <div class="item_name">Spaceman 3</div>
                 <div class="item_price">5 EUR</div>
