--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,8 @@
                 <div class="item_name">Overcome</div>
                 <div class="item_price">5 EUR</div>
             </div></a>
-            <a href='product.html'><div class='product'>
+            <a href='./item.html?title=Brand_New_Eyes&cost=50&src=./images/brandneweyes.jpg'>
+                <div class='item'>
                     <img src="images/brandneweyes.jpg" alt="">
                     <div class="item_name">Brand New Eyes</div>
                     <div class="item_price">50 EUR</div>
