--- a/static/item.html
+++ b/static/item.html
@@ -3,7 +3,6 @@
 <html>
     <head>
         <script>
-            // alert("Hello World, item page!");
             const x = window.location;
             console.log(x);
             const urlParams = new URLSearchParams(window.location.search);
@@ -22,6 +21,7 @@
             <button class='button' type="submit">Login/Sign up</button>
             <button class='button' type="submit">Cart</button></a>
         </div>
+        <div class="glow"></div>
     </head>
     <body>
         <h1>Product page</h1>
