create elements + css

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,13 @@
                     <div class="item_name">Brand New Eyes</div>
                     <div class="item_price">50 EUR</div>
             </div></a>
+            <!-- 
+            <a href='./item.html?title=Lilleke&cost=25&src=./images/Lilleke.jpg'>
+                <div class='item'>
+                    <img src="images/lilleke.jpg" alt="">
+                    <div class="item_name">Lilleke</div>
+                    <div class="item_price">25 EUR</div>
+            </div></a>-->
             
         </div>
        
