.js files separated into modules + demos, style changes

--- a/static/index.html
+++ b/static/index.html
@@ -5,18 +5,19 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
+    <script src="./utils.js"></script>
     <script src="./itemsList.js"></script>
     <title>rp2019</title>
     <div class="header">
         <img class='logo' src="images/logo.png" alt="LOGO"></img>
         <button class='header__buttons' type="submit">Login/Sign up</button>
         <button class='header__buttons' type="submit">Cart</button>
-        <div class="glow"></div>
     </div>
 
 </head>
 
 <body>
+    <div class="glow"></div>
     <h1>Art</h1>
     <div class="category-wrapper">
             Select category:
