--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
-    <script src="./utils.js"></script>
-    <script src="./itemsList.js"></script>
+    <script src="./bundle.js"></script>
+    <!-- <script src="./utils.js"></script>
+    <script src="./itemsList.js"></script> -->
     <title>rp2019</title>
     <div class="header">
         <img class='logo' src="images/logo.png" alt="LOGO"></img>
