--- a/public/item.html
+++ b/public/item.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link href="./style.css" rel="stylesheet">
-    <script src="./item.js"></script>
+    <script src="./bundle.js"></script>
     <!--<script src="./item.js"></script>-->
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     
