--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet">
     <title>rp2019</title>
 </head>
     <body>
