--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
+    <base href="/">
     <meta charset="utf-8">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet"> -->
     <link href="/static/style.css" rel="stylesheet">
     <title>rp2019</title>
 </head>
